--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,23 +1,8 @@
-body{
-    padding: 50px;
-    font-size: 14px;
+header{
+    text-align: center;
 }
 
-#content{
-    width: 800px;
-    margin: 0 auto;
-}
-
-#room {
-    background-color: #ddd;
-    margin-bottom: 1em;
-}
-
-#messages {
-    width: 690px;
-    height: 300px;
-    overflow: auto;
-    background-color: #eee;
-    margin-bottom: 1em;
-    margin-right: 10px;
+header img{
+    width: 200px;
+    height: 200px;
 }
