--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,20 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>blog</title>
+  <title>Document</title>
+  <link type="text/css" rel="stylesheet" href="/css/index.css" />
 </head>
 <body>
-  <h1>Latest posts</h1>
-  <ul>
-    <li>%</li>
-  </ul>
+  <header>
+    <img src="/img/logo.jpeg" alt="logo" />
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/about">about</a></li>
+    </ul>
+  </nav>
+ {{{body}}}
 </body>
 </html>
